# solitaire

./: CMakeLists.txt  Makefile  Notes.txt  README.md  adinput.txt  advance  check  input.txt  input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input9.txt  out0.txt  output.txt  tempMake  winnable
ProjectDocumentation/: README.txt
SolitaireUML/: Winnable Initial Dependancies.uxf  WinnableSearchManager.uxf
Testing/: Solitaire_Testing.cpp  Solitaire_Testing.h
advancefile/: advance.c  advance.h  advancef.c  moves.c  moves.h  printGame.c  printGame.h  printGameToFile.c  printGameToFile.h  supportFunctions2.c
advancefiles/: advance.c  advance.h  main.c  moves.c  moves.h
checkfile/: card.c  card.h  check.c  check.h  checkf.c  foundation.c  foundation.h  gameconfiguration.h  main.c  rules.c  rules.h  stockWaste.c  stockWaste.h  supportFunctions.c  tableau.c  tableau.h
commonfiles/: Card.c  Card.h  card.c  card.h  foundations.c  foundations.h  gameconfiguration.c  gameconfiguration.h  moves.c  moves.h  rules.c  rules.h  stockwaste.c  stockwaste.h  tableau.c  tableau.h
movefiles/: moves.c  moves.h
winnablefile/: Card.cpp  Card.h  Foundation.cpp  Foundation.h  GameConfiguration.cpp  GameConfiguration.h  Move.cpp  Move.h  Moves.cpp  Moves.h  ReadInputFile.cpp  ReadInputFile.h  Rules.cpp  Rules.h  SearchManager.cpp  SearchManager.h  SearchSettings.cpp  SearchSettings.h  Stock.cpp  Stock.h  StockWaste.cpp  StockWaste.h  Tableau.cpp  Tableau.h  Tableaus.cpp  Tableaus.h  Testing.cpp  Testing.h  card.cpp  card.h  cardFunctions.cpp  cardHeader.h  findWinning.cpp  findWinning.h  foundation.cpp  foundation.h  foundations.cpp  foundations.h  gameBoard.cpp  gameBoard.h  (+30 more)
winnablefiles/: main.cpp  winnable.cpp  winnable.h
